[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/NightBg.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/xolonium-fonts-4.1/ttf/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/objects/TRButton.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.803922, 0.0392157, 0.862745, 1 )
border_width_left = 12
border_width_top = 12
border_width_bottom = 12
border_color = Color( 0.427451, 0, 0.403922, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 96
outline_size = 3
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.278431, 0.278431, 0.278431, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.278431, 0.278431, 0.278431, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.219608, 0.219608, 0.219608, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 3
outline_color = Color( 1, 0.235294, 0, 1 )
use_filter = true
extra_spacing_char = -2
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 48
outline_size = 3
outline_color = Color( 1, 0.235294, 0, 1 )
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 41.9999
height = 84.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 35.5533
height = 1104.89

[sub_resource type="Animation" id=9]
length = 2.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12.0, -12.0, 12.0 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 540 )
script = ExtResource( 3 )

[node name="Progress" type="CanvasLayer" parent="."]
layer = 0

[node name="Bar" type="ProgressBar" parent="Progress"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -534.0
margin_right = 534.0
margin_bottom = 82.0
custom_styles/fg = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
value = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Progress"]
visible = false
margin_top = 174.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0.678431, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.235294, 0, 1 )
text = "Hello There, you shouldn't be able to see this multiline
multiline text"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TRButton" parent="Progress/Info" instance=ExtResource( 5 )]
margin_top = 63.0
margin_bottom = 152.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "Play Again"
button_name = "play_game"
load_scene = "res://scenes/Level1.tscn"
signal_target = NodePath("../../..")

[node name="TRButton2" parent="Progress/Info" instance=ExtResource( 5 )]
margin_top = 261.0
margin_bottom = 350.0
text = "Main Menu"
button_name = "exit_to_menu"
load_scene = "res://scenes/MainMenu.tscn"
signal_target = NodePath("../../..")

[node name="Danger" type="ColorRect" parent="Progress"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.117647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SmallExitMenu" parent="Progress" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 210.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 10 )
text = "Menu"
button_name = "exit_to_menu"
load_scene = "res://scenes/MainMenu.tscn"
signal_target = NodePath("../..")

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_bottom = 1080
offset_v = -0.4

[node name="NightBg" parent="Camera" instance=ExtResource( 2 )]
layer = -2

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -438 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="Exhaust" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 0, 2.4 )
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 16
lifetime = 2.0
speed_scale = 2.4
emission_shape = 2
emission_rect_extents = Vector2( 80, 1 )
direction = Vector2( 0, 1 )
spread = 0.0
initial_velocity = 696.0
scale_amount = 8.0
color = Color( 0, 0.807843, 1, 1 )
hue_variation_random = 1.0

[node name="SpriteCollider" type="CollisionShape2D" parent="."]
position = Vector2( 6.10352e-05, -438 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="CandyParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 540 )
emitting = false
amount = 12
one_shot = true
speed_scale = 1.2
explosiveness = 0.6
lifetime_randomness = 1.0
fract_delta = false
emission_shape = 1
emission_sphere_radius = 12.0
direction = Vector2( 0, -1 )
spread = 6.0
gravity = Vector2( 0, 0 )
initial_velocity = 424.0
scale_amount = 14.0
scale_amount_random = 0.6
color = Color( 0.85098, 0.580392, 1, 1 )
hue_variation = -0.03
hue_variation_random = 1.0

[node name="BeamRay" type="RayCast2D" parent="."]
position = Vector2( 0, -324 )
enabled = true
cast_to = Vector2( 0, 1080 )

[node name="BeamArea" type="Area2D" parent="."]
position = Vector2( 0, 102 )
space_override = 3
gravity = -1500.0
linear_damp = 1.0

[node name="Beam" type="ColorRect" parent="BeamArea"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = -510.0
margin_right = 36.0
margin_bottom = 684.0
color = Color( 1, 0.94902, 0.403922, 0.282353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeamShape" type="CollisionShape2D" parent="BeamArea" groups=[
"beam",
]]
position = Vector2( 0, 108 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Wobble"
anims/Wobble = SubResource( 9 )

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LockTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ImmunityTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="BeamArea" to="." method="_on_BeamArea_entered"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_CollectTimer_finish"]
[connection signal="timeout" from="LockTimer" to="." method="_on_LockTimer_timeout"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_ImmunityTimer_timeout"]
